kube-envoy/envoy-reverse-proxy/envoy.yml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/app1" }
                route: { prefix_rewrite: "/", host_rewrite: myapp1, cluster: myapp_cluster1, timeout: 60s }
              - match: { prefix: "/app2" }
                route: { prefix_rewrite: "/", host_rewrite: myapp2, cluster: myapp_cluster2, timeout: 60s }            
          http_filters:
          - name: envoy.router
  clusters:
  - name: myapp_cluster1
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ${ENVOY_LB_ALG}
    hosts: [{ socket_address: { address: ${SERVICE_NAME1}, port_value: 80 }}]
  - name: myapp_cluster2
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ${ENVOY_LB_ALG}
    hosts: [{ socket_address: { address: ${SERVICE_NAME2}, port_value: 80 }}]
